--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,5 +24,6 @@ subjects:
 - !lcsh 'Economics -- History -- To 1800'
 - !lcsh 'Property -- History -- To 1500'
 - !lcc 'HB'
+- GITenberg
 title: An Essay on Mediæval Economic Teaching
 url: http://www.gutenberg.org/ebooks/13488
